--- a/.env.example
+++ b/.env.example
@@ -16,9 +16,10 @@ PHP_CLI_SERVER_WORKERS=4
 BCRYPT_ROUNDS=12
 
 LOG_CHANNEL=stack
-LOG_STACK=single
+LOG_STACK=single,messenger
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
+MESSENGER_LOG_LEVEL=error
 
 DB_CONNECTION=pgsql
 DB_HOST=db
